<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/whit"
    android:focusable="true"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <com.balysv.materialripple.MaterialRippleLayout
        android:id="@+id/item_click"
        style="@style/RippleStyleMainColor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:mrl_rippleRoundedCorners="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:orientation="vertical"
            android:weightSum="15">


            <ImageView
                android:id="@+id/item_image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="8.0"
                android:contentDescription="@string/photo"
                android:scaleType="centerCrop"
                android:src="@drawable/newspaper"/>

            <TextView
                android:id="@+id/item_title"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="2.0"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/adress"
                android:marqueeRepeatLimit="marquee_forever"
                android:padding="5dp"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/title_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_subject"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="4.0"
                android:hint="@string/hint_of_subject"
                android:textSize="@dimen/text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.0"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/item_date"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/day_month_year"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/gray" />

                <TextView
                    android:id="@+id/item_writer"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/writer_name"
                    android:textColor="@color/background"
                    android:textColorHint="@color/background"
                    android:textSize="14sp"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>

    </com.balysv.materialripple.MaterialRippleLayout>


</androidx.cardview.widget.CardView>