<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/logo_with_text"
        android:padding="20dp"
        android:src="@drawable/trend_text_spalsh"
        app:layout_constraintBottom_toTopOf="@+id/email_filed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_filed"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:textColorHint="@color/gold"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextAppearance="@style/HintTextLogin"
        app:layout_constraintBottom_toTopOf="@+id/pass_filed"
        app:layout_constraintDimensionRatio="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/HintTextLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_email"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress|textNoSuggestions"
            android:textAppearance="@style/HintTextLogin" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass_filed"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/gold"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextAppearance="@style/HintTextLogin"
        app:layout_constraintBottom_toTopOf="@+id/card_login"
        app:layout_constraintDimensionRatio="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_filed"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/gold">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/HintTextLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_password"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAppearance="@style/HintTextLogin" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:backgroundTint="@color/gold"
        app:cardCornerRadius="15dp"
        app:cardElevation="3dp"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintDimensionRatio="8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_filed"
        tools:targetApi="lollipop">

        <com.balysv.materialripple.MaterialRippleLayout
            style="@style/RippleStyleDark"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text="@string/login"
                android:textAppearance="@style/HintTextLogin"
                android:textColor="@color/background"
                android:textSize="17sp" />
        </com.balysv.materialripple.MaterialRippleLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="7"
        app:layout_constraintBottom_toTopOf="@+id/text_creat"
        app:layout_constraintDimensionRatio="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_login">

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:background="@color/gold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="@color/gold"
            android:textSize="20sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:background="@color/gold" />


    </LinearLayout>

    <TextView
        android:id="@+id/text_creat"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="200dp"
        android:layout_marginRight="200dp"
        android:gravity="fill"
        android:text="@string/you_dont_have_accont"
        android:textColor="@color/gold"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/card_register"
        app:layout_constraintDimensionRatio="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_register"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:backgroundTint="@color/background"
        app:cardCornerRadius="15dp"
        app:cardElevation="3dp"
        app:layout_constraintBottom_toTopOf="@+id/join_to_us"
        app:layout_constraintDimensionRatio="8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_creat"
        tools:targetApi="lollipop">

        <com.balysv.materialripple.MaterialRippleLayout
            style="@style/RippleStyleLight"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/regiter_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_style"
                android:text="@string/register"
                android:textAppearance="@style/HintTextLogin"
                android:textColor="@color/gold"
                android:textSize="17sp" />
        </com.balysv.materialripple.MaterialRippleLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/join_to_us"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/join_to_us"
        android:textColor="@color/gold"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_register" />

    <com.victor.loading.rotate.RotateLoading
        android:id="@+id/rotateloading"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:loading_color="@color/darkWhit"
        app:loading_width="5dp" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>